--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-    "scripts": {
-      "start": "electron .",
-      "build": "electron-packager . electron-demo --win --out ../HelloWorldApp --arch=x64 --electron-version=4.0.2 --overwrite --ignore=node_module",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-packager . electron-demo --win --out ./dist --arch=x64 --electron-version=4.0.2 --overwrite --ignore=node_module",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "electron": "^4.0.2",
     "electron-log": "^2.2.17",
@@ -15,7 +15,10 @@
     "update-electron-app": "^1.3.0"
   },
   "devDependencies": {},
-  "repository": "https://github.com/electron/electron-api-demos",
+  "repository":{
+    "type": "git",
+    "url": "git@github.com:xl07097/electron-demo.git"
+  }, 
   "author": "xueliang",
   "license": "ISC"
 }
