--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-packager . electron-demo --win --out ./dist --arch=x64 --electron-version=4.0.2 --overwrite --ignore=node_module",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-packager . electron-demo --win --out ./myClient --arch=x64 --app-version=0.0.1 --electron-version=2.0.4 --overwrite --ignore=node_module"
   },
   "dependencies": {
-    "electron": "^4.0.2",
+     "electron": "^4.0.2",
     "glob": "^7.1.3",
     "update-electron-app": "^1.3.0"
   },
