--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-packager . electron-demo --win --out ./dist --arch=x64 --electron-version=5.0.6 --overwrite --ignore=node_module",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "pack": "electron-packager . electron-demo --win --out ./myClient --arch=x64 --app-version=0.0.1 --electron-version=2.0.4 --overwrite --ignore=node_module"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "electron": "^5.0.6",
+    "electron": "^8.2.2",
     "glob": "^7.1.3",
     "update-electron-app": "^1.3.0"
   },
