--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "electron-demo",
   "version": "1.0.0",
   "description": "lecetron demo",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . electron-demo --win --out ./dist --arch=x64 --electron-version=5.0.6 --overwrite --ignore=node_module",
+    "build1": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=dist",
+    "build": "electron-packager . --overwrite electron-demo --win --out=dist --arch=x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "devtron": "^1.4.0",
     "electron": "^8.2.2",
+    "electron-log": "^2.2.17",
     "glob": "^7.1.3",
     "update-electron-app": "^1.3.0"
   },
   "devDependencies": {
-    "devtron": "^1.4.0",
-    "electron-log": "^2.2.17",
+
     "electron-packager": "^13.1.1"
   },
   "repository": {
