--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build1": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=dist",
-    "build": "electron-packager . --overwrite electron-demo --win --out=dist --arch=x64",
+    "build1": "electron-packager . --overwrite  --asar=true --platform=win32 --arch=ia32 --out=dist",
+    "build": "electron-packager . --overwrite electron-demo --asar  --win --out=dist --arch=x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "devtron": "^1.4.0",
-    "electron": "^8.2.2",
     "electron-log": "^2.2.17",
     "glob": "^7.1.6",
     "update-electron-app": "^1.3.0"
   },
   "devDependencies": {
-    "electron-packager": "^13.1.1"
+    "electron": "^8.2.2",
+    "electron-packager": "^14.2.1"
   },
   "repository": {
     "type": "git",
