--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build1": "electron-packager . --overwrite  --asar=true --platform=win32 --arch=ia32 --out=dist",
+    "build1": "electron-packager . --overwrite  --platform=win32 --arch=ia32 --out=dist",
     "build": "electron-packager . --overwrite electron-demo --asar  --win --out=dist --arch=x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
