--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "build1": "electron-packager . --overwrite  --platform=win32 --arch=ia32 --out=dist",
-    "build": "electron-packager . --overwrite electron-demo --asar  --win --out=dist --arch=x64",
+    "build": "electron-packager . --overwrite  --appName=创客 --asar  --win --out=dist --arch=x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "devtron": "^1.4.0",
-    "electron": "^8.2.2",
+    "electron": "^9.1.1",
     "electron-packager": "^14.2.1"
   },
   "repository": {
