--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "electron-demo",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "lecetron demo",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "cross-env NODE_ENV=development electron .",
     "build1": "electron-packager . --overwrite  --platform=win32 --arch=ia32 --out=dist",
     "build": "electron-packager . --overwrite --ignore=build/  --appName=创客 --asar  --win --out=dist --arch=x64 --icon=build/icons/48x48.ico",
-    "pack": "electron-builder",
+    "pack": "cross-env NODE_ENV=development electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "glob": "^7.1.6"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "devtron": "^1.4.0",
     "electron": "^11.3.0",
     "electron-builder": "^22.8.0",
