--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=development electron .",
     "build1": "electron-packager . --overwrite  --platform=win32 --arch=ia32 --out=dist",
     "build": "electron-packager . --overwrite --ignore=build/  --appName=创客 --asar  --win --out=dist --arch=x64 --icon=build/icons/48x48.ico",
-    "pack": "cross-env NODE_ENV=development electron-builder",
+    "pack": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1",
     "major": "npm version major",
     "minor": "npm version minor",
@@ -47,7 +47,7 @@
       "src/**/*"
     ],
     "win": {
-      "icon": "build/icons/512x512.ico",
+      "icon": "build/icons/256x256.ico",
       "artifactName": "${productName}-${version}.${ext}",
       "target": "nsis"
     },
@@ -57,7 +57,7 @@
       "allowToChangeInstallationDirectory": true,
       "allowElevation": true,
       "deleteAppDataOnUninstall": true,
-      "installerIcon": "build/icons/512x512.ico",
+      "installerIcon": "build/icons/256x256.ico",
       "createDesktopShortcut": true
     }
   }
