--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
-    "build1": "electron-packager . --overwrite  --platform=win32 --arch=ia32 --out=dist",
+    "build1": "electron-packager . --overwrite  --ignore=build/ --platform=win32 --arch=ia32 --out=dist",
     "build": "electron-packager . --overwrite --ignore=build/  --appName=创客 --asar  --win --out=dist --arch=x64 --icon=build/icons/48x48.ico",
-    "pack": "electron-builder",
+    "upload:app": "ts-node ./scripts/upload.ts",
+    "pack": "electron-builder && npm run upload:app",
     "major": "npm version major",
     "minor": "npm version minor",
     "patch": "npm version patch"
@@ -18,11 +19,17 @@
     "glob": "^7.1.6"
   },
   "devDependencies": {
+    "@types/ali-oss": "^6.16.2",
+    "@types/node": "^14.18.1",
+    "ali-oss": "^6.16.0",
     "cross-env": "^7.0.3",
     "devtron": "^1.4.0",
     "electron": "^15.3.1",
     "electron-builder": "^22.13.1",
-    "electron-packager": "^15.4.0"
+    "electron-packager": "^15.4.0",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   },
   "repository": {
     "type": "git",
