--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .DS_Store
 node_modules
 /dist
-build/win*
-build/*.exe
-build/*.yml
-build/*.yaml
-build/*.exe.*
+release
 
 # local env files
 .env.local
