--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development electron ./dist/main.js",
     "build:app": "electron-builder build --x64 && npm run upload:app",
-    "build:main": "tsc --build ./src/main/tsconfig.json",
+    "build:main": "tsc --build ./main/tsconfig.json",
     "upload:app": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
     "minor": "npm version minor",
     "patch": "npm version patch",
-    "watch:main": "tsc --build ./src/main/tsconfig.json -w"
+    "watch:main": "tsc --build ./main/tsconfig.json -w"
   },
   "dependencies": {
     "electron-log": "^4.2.4",
