--- a/render/package.json
+++ b/render/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "electron": "^15.3.4",
+    "less": "^4.1.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
