--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.1",
-    "glob": "^7.1.6"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/ali-oss": "^6.16.2",
@@ -28,7 +28,6 @@
     "electron-builder": "^22.13.1",
     "electron-packager": "^15.4.0",
     "ts-node": "^10.4.0",
-    "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "repository": {
@@ -51,10 +50,11 @@
     ],
     "files": [
       "dist",
-      "src/render/**/*"
+      "preload",
+      "build"
     ],
     "win": {
-      "icon": "build/icons/256x256.ico",
+      "icon": "assets/icons/256x256.ico",
       "artifactName": "${productName}-${version}.${ext}",
       "target": "nsis"
     },
@@ -64,7 +64,7 @@
       "allowToChangeInstallationDirectory": true,
       "allowElevation": true,
       "deleteAppDataOnUninstall": true,
-      "installerIcon": "build/icons/256x256.ico",
+      "installerIcon": "assets/icons/256x256.ico",
       "createDesktopShortcut": true
     }
   }
