--- a/render/package.json
+++ b/render/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-legacy": "^1.6.4",
     "@vitejs/plugin-react": "^1.0.7",
     "electron": "^15.3.4",
     "less": "^4.1.2",
