--- a/render/package.json
+++ b/render/package.json
@@ -7,8 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icon-park/react": "^1.3.5",
+    "antd": "^4.17.4",
+    "dayjs": "^1.10.7",
+    "events": "^3.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
@@ -18,6 +23,7 @@
     "electron": "^15.3.4",
     "less": "^4.1.2",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-import": "^0.4.0"
   }
 }
