fix: 更新下载多次问题

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "publish": [
       {
         "provider": "generic",
-        "url": "https://files.zhiqiuge.com/software/install/"
+        "url": "https://file.zhiqiuge.com/software/install/"
       }
     ],
     "files": [
