--- a/render/package.json
+++ b/render/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@icon-park/react": "^1.3.5",
     "antd": "^4.17.4",
     "dayjs": "^1.10.7",
