--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development electron ./dist/main.js",
     "precompiler": "electron-builder build --x64",
-    "build:app": "electron-builder build --x64 && npm run upload:app",
+    "build:release": "electron-builder build --x64 && npm run upload:app",
     "build:main": "tsc --build ./main/tsconfig.json",
     "upload:app": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
