--- a/render/package.json
+++ b/render/package.json
@@ -9,22 +9,33 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@icon-park/react": "^1.4.2",
-    "antd": "^5.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "antd": "^5.4.2",
+    "axios": "^1.3.5",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "events": "^3.3.0",
+    "nanoid": "^4.0.2",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-legacy": "^3.0.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^18.15.11",
+    "@types/qs": "^6.9.7",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^3.1.0",
+    "vite-plugin-imp": "^2.3.1",
     "electron": "^21.0.1",
     "less": "^4.1.2",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.1",
     "vite-plugin-import": "^0.4.0"
   }
 }
