--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electron demo",
   "main": "dist/main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron ./dist/main.js",
+    "start": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
     "precompiler": "electron-builder build --x64",
     "build:release": "electron-builder build --x64 && npm run upload:app",
     "build:main": "tsc --build ./main/tsconfig.json",
