--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "ffi-napi": "^4.0.3",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
@@ -52,7 +53,8 @@
       "assets",
       "dist",
       "preload",
-      "build"
+      "build",
+      "exec"
     ],
     "win": {
       "icon": "assets/icons/256x256.ico",
