--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
-    "precompiler": "electron-builder build --x64",
+    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
     "build:release": "electron-builder build --x64 && npm run upload:app",
     "build:main": "tsc --build ./main/tsconfig.json",
     "upload:app": "ts-node ./scripts/upload.ts",
@@ -17,7 +17,6 @@
   "dependencies": {
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
-    "ffi-napi": "^4.0.3",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
@@ -29,6 +28,7 @@
     "electron": "^25.1.0",
     "electron-builder": "^23.6.0",
     "ts-node": "^10.9.1",
+    "ffi-napi": "^4.0.3",
     "typescript": "^5.0.4"
   },
   "repository": {
