--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "electron-log": "^5.0.1",
     "electron-updater": "^6.1.7",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.6",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
