--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
       }
     ],
     "asarUnpack": [
-      "exec"
+      "exec",
+      "node_modules/sqlite3"
     ],
     "asar": {
       "smartUnpack": true
