--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,11 @@
     "types": [
       "node",
       "vite/client"
-    ]
+    ],
+    "paths": {
+      "@/*": [
+        "./src/render/*"
+      ]
+    }
   }
 }
