--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux": "^5.0.1",
+    "sqlite3": "^5.1.7",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
