--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
     "rootDir": "./",
-    "outDir": "../dist",
+    "outDir": "../../dist",
     "target": "es5",
     "moduleResolution": "node"
   }
