--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "electron demo",
   "main": "dist/main.js",
   "scripts": {
-    "start": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
+    "render:dev": "cd ./src/render && vite",
+    "render:build": "cd ./src/render && tsc && vite build",
+    "main:dev": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
     "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
     "build:release": "electron-builder build --x64 && npm run upload:oss",
     "build:main": "tsc --build ./src/main/tsconfig.json",
@@ -17,19 +19,41 @@
   "dependencies": {
     "electron-log": "^5.0.1",
     "electron-updater": "^6.1.7",
-    "knex": "^3.1.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@icon-park/react": "^1.4.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/ali-oss": "^6.16.2",
     "@types/node": "^18.19.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/qs": "^6.9.11",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.15.3",
+    "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
+    "events": "^3.3.0",
+    "qs": "^6.11.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "redux": "^5.0.1",
     "ali-oss": "^6.20.0",
     "cross-env": "^7.0.3",
     "devtron": "^1.4.0",
-    "electron": "^28.2.1",
     "electron-builder": "^24.9.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "electron": "^28.2.1",
+    "less": "^4.2.0",
+    "typescript": "^5.4.2",
+    "vite": "^4.5.0",
+    "vite-plugin-import": "^0.4.0"
   },
   "repository": {
     "type": "git",
