--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/main.js",
   "scripts": {
     "render:dev": "cd ./src/render && vite",
-    "render:build": "cd ./src/render && tsc && vite build",
     "main:dev": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
-    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
-    "build:release": "electron-builder build --x64 && npm run upload:oss",
+    "build:render": "cd ./src/render && tsc && vite build",
     "build:main": "tsc --build ./src/main/tsconfig.json",
+    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
+    "build:publish": "electron-builder build --x64 && npm run upload:oss",
     "upload:oss": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
     "minor": "npm version minor",
