--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@types/ali-oss": "^6.16.2",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^18.19.2",
-    "@vitejs/plugin-react": "^4.2.1",
     "@types/qs": "^6.9.11",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "ali-oss": "^6.20.0",
     "antd": "^5.15.3",
     "axios": "^1.6.7",
@@ -52,8 +52,8 @@
     "redux": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.4.2",
-    "vite": "^4.5.0",
-    "vite-plugin-import": "^0.4.0"
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^4.5.0"
   },
   "repository": {
     "type": "git",
