--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "electron demo",
   "main": "dist/main.js",
   "scripts": {
-    "render:dev": "cd ./src/render && vite",
-    "main:dev": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
+    "dev:render": "cd ./src/render && vite",
+    "dev:main": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
     "build:render": "cd ./src/render && tsc && vite build",
     "build:main": "tsc --build ./src/main/tsconfig.json",
-    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
     "build:publish": "electron-builder build --x64 && npm run upload:oss",
     "upload:oss": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
     "minor": "npm version minor",
     "patch": "npm version patch",
+    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
     "watch:main": "tsc --build ./src/main/tsconfig.json -w"
   },
   "dependencies": {
