--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,30 +9,32 @@ jobs:
   publish:
     runs-on: windows-latest
     steps: 
-      - name: Checkout
-        uses: actions/checkout@v3
+      # - name: Checkout
+      #   uses: actions/checkout@v3
 
-      - name: nodejs
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          registry-url: https://registry.npmjs.org
+      # - name: nodejs
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: 18
+      #     registry-url: https://registry.npmjs.org
 
-      - name: Install
-        run: npm install
+      # - name: Install
+      #   run: npm install
 
-      - name: build:render
-        run: npm run build:render
+      # - name: build:render
+      #   run: npm run build:render
 
-      - name: build:main
-        run: npm run build:main
+      # - name: build:main
+      #   run: npm run build:main
 
-      - name: realease
-        run: npm run precompiler
+      # - name: realease
+      #   run: npm run precompiler
 
-      # - name: publish
-      #   env:
-      #     ACCESS_KEY_ID: ${{secrets.ACCESS_KEY_ID}}
-      #     ACCESS_KEY_SECRET: ${{secrets.ACCESS_KEY_SECRET}}
-      #     bucket: ${{secrets.bucket}}
-      #   run: npm run upload:oss
+      - name: publish
+        env:
+          TEST_ENV: ${{ secrets.testEnv }}
+          # ACCESS_KEY_ID: ${{secrets.ACCESS_KEY_ID}}
+          # ACCESS_KEY_SECRET: ${{secrets.ACCESS_KEY_SECRET}}
+          # bucket: ${{secrets.bucket}}
+        # run: npm run upload:oss
+        echo: ${{ secrets.testEnv }}
