--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,9 +29,8 @@ jobs:
 
       - name: publish
         env:
-          TEST_ENV: ${{ secrets.testEnv }}
           # ACCESS_KEY_ID: ${{secrets.ACCESS_KEY_ID}}
           # ACCESS_KEY_SECRET: ${{secrets.ACCESS_KEY_SECRET}}
           # bucket: ${{secrets.bucket}}
         # run: npm run upload:oss
-        run: echo ${{ secrets.testEnv }}
+        run: npx cross-env bucket=${{ secrets.bucket }} accessKeyId=${{ secrets.accessKeyId }} accessKeySecret=${{ secrets.accessKeySecret }} ts-node ./scripts/upload.ts
