--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"minor": "npm version minor",
 		"patch": "npm version patch",
 		"precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
-		"watch:main": "tsc --build ./src/main/tsconfig.json -w"
+		"watch:main": "tsc --build ./src/main/tsconfig.json -w",
+		"lu": "cross-env lplp=po lplp1=po lplp12=po && ts-node ./scripts/upload.ts"
 	},
 	"dependencies": {
 		"@deno/kv": "^0.7.0",
