--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,4 +35,4 @@ jobs:
           bucket: ${{ secrets.bucket }}
           accessKeyId: ${{ secrets.accessKeyId }}
           accessKeySecret: ${{ secrets.accessKeySecret }}
-        run: npx cross-env bucket=${{env.bucket}} accessKeyId=${{env.accessKeyId}} accessKeySecret=${{env.accessKeySecret}} ts-node ./scripts/upload.ts
+        run: npx ts-node ./scripts/upload.ts
