--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,3 +46,20 @@ jobs:
         with:
           name: 创客
           path: release/*.exe
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: release/*.exe
+          asset_name: 创客-${{ github.ref }}.exe
+          asset_content_type: application/octet-stream
