--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   publish:
@@ -64,6 +64,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.release_token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: release/*.exe
+          asset_path: release/${{github.ref}}.exe
           asset_name: 创客-${{ github.ref }}.exe
           asset_content_type: application/octet-stream
