--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,16 +47,21 @@ jobs:
           name: 创客
           path: release/*.exe
 
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.release_token }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.get_version.outputs.VERSION }}
+          release_name: Release ${{ steps.get_version.outputs.VERSION }}
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -64,6 +69,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.release_token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: release/创客-${{github.ref}}.exe
-          asset_name: 创客-${{ github.ref }}.exe
+          asset_path: release/创客-${{ steps.get_version.outputs.VERSION }}.exe
+          asset_name: 创客-${{ steps.get_version.outputs.VERSION }}.exe
           asset_content_type: application/octet-stream
