--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "electron demo",
   "main": "dist/main.js",
   "scripts": {
-    "dev:render": "cd ./src/render && vite",
+    "dev:render": "rsbuild dev",
     "dev:main": "npm run build:main && cross-env NODE_ENV=development electron ./dist/main.js",
-    "build:render": "cd ./src/render && tsc && vite build",
+    "build:render": "rsbuild build",
     "build:main": "tsc --build ./src/main/tsconfig.json",
     "build:publish": "electron-builder build --x64 && npm run upload:oss",
     "upload:oss": "ts-node ./scripts/upload.ts",
@@ -28,24 +28,28 @@
     "@ant-design/icons": "^5.3.7",
     "@icon-park/react": "^1.4.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@rsbuild/core": "^1.3.16",
+    "@rsbuild/plugin-less": "^1.2.3",
+    "@rsbuild/plugin-node-polyfill": "^1.3.0",
+    "@rsbuild/plugin-react": "^1.3.0",
+    "@rsbuild/plugin-sass": "^1.3.1",
     "@types/ali-oss": "^6.16.11",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.14.2",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
     "ali-oss": "^6.20.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "codemirror": "^6.0.1",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "devtron": "^1.4.0",
     "electron": "^32.0.1",
-    "electron-builder": "^25.0.5",
+    "electron-builder": "^26.0.12",
     "events": "^3.3.0",
-    "less": "^4.2.0",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -54,9 +58,7 @@
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.4.11"
+    "typescript": "^5.6.3"
   },
   "repository": {
     "type": "git",
