--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -20,8 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": [
-      "node",
-      "vite/client"
+      "node"
     ],
     "paths": {
       "@/*": [
