--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
   },
   "dependencies": {
     "@deno/kv": "^0.10.0",
-    "@excalidraw/excalidraw": "^0.18.0",
     "electron-log": "^5.3.3",
-    "electron-updater": "^6.6.2",
-    "quill": "^2.0.3",
-    "tslib": "^2.8.1"
+    "electron-updater": "^6.6.2"
   },
   "devDependencies": {
-    "@ant-design/icons": "^5.3.7",
+    "@ant-design/icons": "^6.0.0",
+    "@excalidraw/excalidraw": "^0.18.0",
     "@icon-park/react": "^1.4.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@rsbuild/core": "^1.3.16",
@@ -40,17 +38,18 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "ali-oss": "^6.20.0",
-    "antd": "^5.24.6",
+    "antd": "^5.24.9",
     "axios": "^1.8.4",
     "codemirror": "^6.0.1",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "devtron": "^1.4.0",
-    "electron": "^32.0.1",
+    "electron": "^36.1.0",
     "electron-builder": "^26.0.12",
     "events": "^3.3.0",
     "qs": "^6.12.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -58,7 +57,8 @@
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   },
   "repository": {
     "type": "git",
