--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "rootDir": "./",
-    "outDir": "../../dist",
+    "outDir": "../../dist/main",
     "target": "es5",
     "moduleResolution": "node"
   }
