--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@deno/kv": "^0.10.0",
     "electron-log": "^5.3.3",
-    "electron-updater": "^6.6.2"
+    "electron-updater": "^6.6.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -57,7 +58,6 @@
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
     "typescript": "^5.8.3"
   },
   "repository": {
