--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:main": "cross-env NODE_ENV=development electron ./dist/main/main.js",
     "build:render": "rsbuild build",
     "build:main": "rspack build",
+    "build:main:dev": "rspack build --mode development",
     "build:publish": "electron-builder build --x64 && npm run upload:oss",
     "upload:oss": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
@@ -28,7 +29,6 @@
     "@icon-park/react": "^1.4.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@rsbuild/core": "^1.4.2",
-    "@rsbuild/plugin-less": "^1.2.4",
     "@rsbuild/plugin-node-polyfill": "^1.3.0",
     "@rsbuild/plugin-react": "^1.3.2",
     "@rsbuild/plugin-sass": "^1.3.2",
