--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "dist/main/main.js",
   "scripts": {
     "dev:render": "rsbuild dev",
-    "dev:main": "cross-env NODE_ENV=development electron ./dist/main/main.js",
+    "dev:main": "electron ./dist/main/main.js",
     "build:render": "rsbuild build",
-    "build:main": "rspack build",
+    "build:main": "rspack build --mode production",
     "build:main:dev": "rspack build --mode development",
     "build:publish": "electron-builder build --x64 && npm run upload:oss",
     "upload:oss": "ts-node ./scripts/upload.ts",
     "major": "npm version major",
     "minor": "npm version minor",
     "patch": "npm version patch",
-    "precompiler": "cross-env NODE_ENV=production electron-builder build --x64",
+    "precompiler": "electron-builder build --x64",
     "watch:main": "tsc --build ./src/main/tsconfig.json -w"
   },
   "dependencies": {
